fix: router changes
