# docs/swagger.json
@@ -14,112 +14,10 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "localhost:5454",
     "basePath": "/api/v1",
     "paths": {
-        "/add-database": {
-            "post": {
-                "description": "To create new database",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "database"
-                ],
-                "summary": "Create new database",
-                "parameters": [
-                    {
-                        "description": "Database",
-                        "name": "database",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/router.DatabaseRequestInput"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "database created successfully"
-                    },
-                    "400": {
-                        "description": "Database already exists"
-                    }
-                }
-            }
-        },
-        "/delete-database": {
-            "post": {
-                "description": "To delete database",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "database"
-                ],
-                "summary": "Delete database",
-                "parameters": [
-                    {
-                        "description": "Database",
-                        "name": "database",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/router.DatabaseRequestInput"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "database deleted successfully"
-                    },
-                    "400": {
-                        "description": "Unexpected error while delete database"
-                    }
-                }
-            }
-        },
-        "/generate-seed-data": {
-            "get": {
-                "description": "This will create generate seed database.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "generate-seed-data"
-                ],
-                "summary": "generate seed database",
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            }
-        },
-        "/get-all-database": {
-            "get": {
-                "description": "To get all database.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "database"
-                ],
-                "summary": "Get all database",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/{databaseName}/add-collection": {
+        "/collection/{databaseName}/add": {
             "post": {
                 "description": "To create new collection.",
                 "produces": [
@@ -157,7 +55,7 @@
                 }
             }
         },
-        "/{databaseName}/delete-collection": {
+        "/collection/{databaseName}/delete": {
             "post": {
                 "description": "To delete collection",
                 "produces": [
@@ -195,7 +93,7 @@
                 }
             }
         },
-        "/{databaseName}/get-all-collection": {
+        "/collection/{databaseName}/get-all": {
             "get": {
                 "description": "To get all collections",
                 "produces": [
@@ -227,7 +125,154 @@
                 }
             }
         },
-        "/{databaseName}/{collectionName}/": {
+        "/collection/{databaseName}/{collectionName}/stats": {
+            "get": {
+                "description": "Collection stats",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "collection"
+                ],
+                "summary": "Collection stats",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "databaseName",
+                        "name": "databaseName",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "collectionName",
+                        "name": "collectionName",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/in_memory_database.Index"
+                        }
+                    },
+                    "400": {
+                        "description": "Database/Collection deleted"
+                    }
+                }
+            }
+        },
+        "/database/add": {
+            "post": {
+                "description": "To create new database",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "database"
+                ],
+                "summary": "Create new database",
+                "parameters": [
+                    {
+                        "description": "Database",
+                        "name": "database",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/router.DatabaseRequestInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "database created successfully"
+                    },
+                    "400": {
+                        "description": "Database already exists"
+                    }
+                }
+            }
+        },
+        "/database/delete": {
+            "post": {
+                "description": "To delete database",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "database"
+                ],
+                "summary": "Delete database",
+                "parameters": [
+                    {
+                        "description": "Database",
+                        "name": "database",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/router.DatabaseRequestInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "database deleted successfully"
+                    },
+                    "400": {
+                        "description": "Unexpected error while delete database"
+                    }
+                }
+            }
+        },
+        "/database/get-all": {
+            "get": {
+                "description": "To get all database.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "database"
+                ],
+                "summary": "Get all database",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/database/load-to-disk": {
+            "get": {
+                "description": "Load database to disk.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "database"
+                ],
+                "summary": "Load database to disk",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/document/{databaseName}/{collectionName}/": {
             "post": {
                 "description": "To create new document",
                 "produces": [
@@ -272,7 +317,7 @@
                 }
             }
         },
-        "/{databaseName}/{collectionName}/all-data": {
+        "/document/{databaseName}/{collectionName}/all-data": {
             "get": {
                 "description": "Read all document",
                 "produces": [
@@ -314,7 +359,7 @@
                 }
             }
         },
-        "/{databaseName}/{collectionName}/filter": {
+        "/document/{databaseName}/{collectionName}/filter": {
             "post": {
                 "description": "Filter document",
                 "produces": [
@@ -365,46 +410,7 @@
                 }
             }
         },
-        "/{databaseName}/{collectionName}/stats": {
-            "get": {
-                "description": "Collection stats",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "collection"
-                ],
-                "summary": "Collection stats",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "databaseName",
-                        "name": "databaseName",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "collectionName",
-                        "name": "collectionName",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/in_memory_database.Index"
-                        }
-                    },
-                    "400": {
-                        "description": "Database/Collection deleted"
-                    }
-                }
-            }
-        },
-        "/{databaseName}/{collectionName}/{id}": {
+        "/document/{databaseName}/{collectionName}/{id}": {
             "get": {
                 "description": "Read document by id.",
                 "produces": [
@@ -543,6 +549,23 @@
                     },
                     "400": {
                         "description": "Database/Collection deleted"
+                    }
+                }
+            }
+        },
+        "/generate-seed-data": {
+            "get": {
+                "description": "This will create generate seed database.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "generate-seed-data"
+                ],
+                "summary": "generate seed database",
+                "responses": {
+                    "200": {
+                        "description": "OK"
                     }
                 }
             }
